# FlipFlop-Codes

./: README.md  pyproject.toml
src/python/: demo.py
src/python/2025/: README.md
src/python/2025/01/: day01.py
src/python/2025/02/: day02.py
src/python/2025/03/: day03.py
src/python/2025/04/: day04.py
src/python/2025/05/: day05.py
src/python/2025/06/: day06.py
src/python/2025/07/: day07.py
